--- a/src/assets/sass/variables.sass
+++ b/src/assets/sass/variables.sass
@@ -5,3 +5,8 @@ $tablet-medium: 750px
 $tablet-full: 1000px
 $medium-site: 1380px
 $full-site: 1600px
+
+$primary-700: #5d137d
+$primary-500: #8e44ad
+$primary-300: #c073df
+$primary-color: #ffffff
