--- a/src/components/NavBar/NavBar.sass
+++ b/src/components/NavBar/NavBar.sass
@@ -9,6 +9,7 @@ $menuwidth: 400px
   display: flex
   flex-direction: row
   font-family: 'Roboto', sans-serif
+  z-index: 9
   &__content
     background-color: #3498db
     display: flex
