--- a/src/components/InfoBar/InfoBar.sass
+++ b/src/components/InfoBar/InfoBar.sass
@@ -28,7 +28,7 @@
 	// 	height: 3em
 	// 	transform: rotateZ(90deg)
 	&[class*="top"], &[class*="bottom"]
-		width: 100vw
+		width: 100%
 		height: 3em
 	&[class*="top"].close
 		top: -3em
