--- a/src/components/Paragraph/Paragraph.sass
+++ b/src/components/Paragraph/Paragraph.sass
@@ -1,5 +1,24 @@
+@import '@/assets/sass/variables.sass'
+
 .c-Paragraph
 	font-weight: 700
 	font-size: 27px
 	text-align: center
 	margin: 20px 0
+	&.header
+		width: 100%
+		font-size: 2.3em
+		position: relative
+		margin: 40px 0
+		&::after, &::before
+			background: linear-gradient(to right, transparent 0%, $primary-700 50%, transparent 100%)
+
+			content: ''
+			height: 3px
+			width: 100%
+			position: absolute
+			left: 0
+		&::before
+			top: -7px
+		&::after
+			bottom: -13px
