fixed copy button

--- a/src/components/Textarea/Textarea.sass
+++ b/src/components/Textarea/Textarea.sass
@@ -14,7 +14,9 @@
 	&__content
 		height: 200px
 	&__buttonCopy
-		height: 3em
+		display: block
+		line-height: 3em
+		text-align: center
 		margin: auto
 		margin-top: 10px
 		width: 50%
